# sphinx-click

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/examples/: commandcollections.rst
examples/: setup.py
examples/commandcollections/: cli.py
examples/commands/: cli.py
examples/groups/: cli.py
releasenotes/notes/: add-auto_envvar_prefix-support-a08e68aba792ee26.yaml  add-show_default-from-context-support-ab4aeffcc513502d.yaml
sphinx_click/: ext.py
tests/: conftest.py  test_extension.py  test_formatter.py
tests/roots/nested-full/: greet.py  index.rst
