[metadata]
name = sphinx-click
summary = Sphinx extension that automatically documents click applications
description-file = README.rst
license = MIT License
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = sphinx
author = Stephen Finucane
author-email = stephen@that.guru
home-page = https://github.com/stephenfin/sphinx-click
project-url = https://that.guru/

[files]
packages =
    sphinx_click

[wheel]
universal = 1
