[metadata]
name = sphinx-click
summary = Sphinx extension that automatically documents click applications
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
author = Stephen Finucane
author_email = stephen@that.guru
url = https://github.com/click-contrib/sphinx-click
project_urls =
    Bug Tracker = https://github.com/click-contrib/sphinx-click/issues
    Documentation = https://sphinx-click.readthedocs.io/en/latest
    Source Code = https://github.com/click-contrib/sphinx-click
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
python_requires = >=3.6
keywords = sphinx

[files]
packages =
    sphinx_click

[flake8]
max-line-length = 88
ignore = E203,E501,E741,W503
